@@ -65,9 +65,9 @@
 # define __int64 long long
 #endif /* __GNUC__ */
 
-#define __MINGW32_VERSION 2.4
-#define __MINGW32_MAJOR_VERSION 2
-#define __MINGW32_MINOR_VERSION 4
+#define __MINGW32_VERSION 3.0
+#define __MINGW32_MAJOR_VERSION 3
+#define __MINGW32_MINOR_VERSION 0
 
 #endif /* __MINGW_H */
 
