@@ -1,5 +1,10 @@
 2003-02-08  Earnie Boyd  <earnie@users.sf.net>
 
+	* include/_mingw.h: Change version to 3.0
+	* Makefile.in: Ditto.
+
+2003-02-08  Earnie Boyd  <earnie@users.sf.net>
+
 	* include/stdlib.h: Make words after #endif a comment.
 
 2003-02-07  Danny Smith  <dannysmith@users.sourceforge.net>
